Support for start new activity on listview click element.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Sunshine</string>
+    <string name="actualizeaza_vremea_timisoara">Actualizeaza vremea Timisoara</string>
 </resources>
