--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,11 @@
 <resources>
     <string name="app_name">Sunshine</string>
     <string name="actualizeaza_vremea_timisoara">Actualizeaza vremea Timisoara</string>
+    <string name="title_activity_settings">Settings</string>
     <string name="drawer_open">Open navigation drawer</string>
     <string name="drawer_close">Close navigation drawer</string>
     <string name="action_settings">Settings</string>
-    <string name="pref_location_label">Location</string>
+    <string name="pref_location_label">Oras</string>
     <string name="pref_location_key" translatable="false">location</string>
     <string name="pref_location_default" translatable="false">Timisoara</string>
 </resources>
